--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </div>
       </div>
       <div class="item footer">
-        <a href="mock.getmimo.com">About Us</a>
-        <a href="mock.getmimo.com">Contact</a>
+        <a href="about-us.html">About Us</a>
+        <a href="contact.html">Contact</a>
       </div>
     </div>
   </body>
