--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
-<!doctype html>
-<html>
-  <head>
-    <link rel="stylesheet" href="style.css" />
-  </head>
+<html lang="en">
+<head>
+  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Wildlife Magazine</title>
+</head>
   <body>
     <div class="container">
       <div class="item header">
