--- a/wildlife-wiki.html
+++ b/wildlife-wiki.html
@@ -1,12 +1,15 @@
-<!doctype html>
-<html>
-  <head>
-    <link rel="stylesheet" href="style.css" />
-  </head>
+<html lang="en">
+<head>
+  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Wildlife Wiki</title>
+</head>
   <body>
     <div class="container">
       <div class="item header">
-        <h1> Wildlife Magazine </h1>
+        <h1>Wildlife Wiki</h1>
       </div>
       <div class="item sidebar">
         <a href="index.html">Home</a>
