Added footer to all pages

--- a/about-us.html
+++ b/about-us.html
@@ -17,3 +17,10 @@
         <a href="wildlife-wiki.html">Wildlife Wiki</a>
         <a href="submit-photo.html">Submit a Photo</a>
       </div>
+      <div class="item footer">
+        <a href="about-us.html">About Us</a>
+        <a href="contact.html">Contact</a>
+      </div>
+    </div>
+  </body>
+</html>
